<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.002">

            <ImageView
                android:id="@+id/main_logo_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_logo_popcorn_picks"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/login_ll"/>

            <LinearLayout
                android:id="@+id/login_ll"
                style="@style/Main.header.layout"
                android:layout_marginStart="180dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/main_logo_iv"
                app:layout_constraintEnd_toStartOf="@id/my_page_ll">
                <ImageView
                    android:id="@+id/login_iv"
                    style="@style/Main.header.iv"
                    android:src="@drawable/ic_login" />
                <TextView
                    android:id="@+id/login_tv"
                    style="@style/Main.header.tv"
                    android:text="@string/str_login"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_page_ll"
                style="@style/Main.header.layout"
                android:layout_marginStart="7dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/login_ll"
                app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                    android:id="@+id/my_page_iv"
                    style="@style/Main.header.iv"
                    android:src="@drawable/ic_my_page"/>
                <TextView
                    android:id="@+id/my_page_tv"
                    style="@style/Main.header.tv"
                    android:text="@string/str_my_page"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/main_nav_tl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/tab_color"
            app:layout_constraintTop_toBottomOf="@id/header_cl"
            app:layout_constraintBottom_toTopOf="@id/main_tab_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_nav_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str_movie" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_nav_theater"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str_theater" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_nav_normal_ticketing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str_normal_ticketing" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_nav_personal_ticketing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str_personal_ticketing" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_tab_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_nav_tl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>